--- a/requirements.txt
+++ b/requirements.txt
@@ -63,8 +63,8 @@ pandas==2.2.3
 pillow==11.1.0
 pinecone==5.4.2
 pinecone-client==5.0.1
-pinecone-plugin-inference==1.1.0
-pinecone-plugin-interface==0.0.7
+pinecone-plugin-inference>=2.0.0,<4.0.0
+pinecone-plugin-interface
 propcache==0.2.1
 protobuf==4.25.5
 protoc-gen-openapiv2==0.0.1
