--- a/requirements.txt
+++ b/requirements.txt
@@ -62,9 +62,9 @@ packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 pinecone==5.4.2
-pinecone-client==5.0.1
-pinecone-plugin-inference>=2.0.0,<4.0.0
-pinecone-plugin-interface
+pinecone-client==4.1.2
+pinecone-plugin-inference==3.1.0
+pinecone-plugin-interface==0.0.7
 propcache==0.2.1
 protobuf==4.25.5
 protoc-gen-openapiv2==0.0.1
@@ -72,6 +72,7 @@ pydantic==2.10.4
 pydantic_core==2.27.2
 pypdf==5.1.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
